New practice question are added

--- a/question.html
+++ b/question.html
@@ -10,6 +10,6 @@
     Check Inspect and then resource bar
 
 
-    <script src="practice.js"></script>
+    <script src="new.js"></script>
 </body>
 </html>
